[GTK][GTK4][WebDriver] Flaky crashes exiting many prompty-related webdriver tests https://bugs.webkit.org/show_bug.cgi?id=233505

Reviewed by Carlos Garcia Campos.

Covered by existing tests.

When building for GTK4, upon dialog closure the dialog widgets might
be removed with `webkitWebViewDialogSetChild(dialog, NULL)` while
the button is still registered as the default widget of the toplevel.

This commit makes sure we don't have a default widget while the
dialog is unmapped, to mirror the map() behavior.

* UIProcess/API/gtk/WebKitScriptDialogImpl.cpp:
(webkitScriptDialogImplUnmap): Added to unset the default widget.
(webkit_script_dialog_impl_class_init): Register unmap callback.



Canonical link: https://commits.webkit.org/244713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286354 268f45cc-cd09-0410-ab3c-d52691b4dbfc